# pose_selector

./: CMakeLists.txt  README.md  package.xml  setup.py
config/: dope_converter_test.yaml  example_mesh_config.yaml  pose_selector_demo.yaml  pose_selector_visualizer_demo.yaml  test_config.yaml  test_save.yaml
example_meshes/: cube.stl  cylinder.stl  sphere.stl
launch/: dope_converter.launch  mesh_visualizer.launch  pose_selector.launch  pose_selector_demo.launch  pose_selector_with_dope_converter.launch  pose_selector_with_visualizer.launch  test_node.launch
msg/: LabeledPose.msg  ObjectList.msg  ObjectPose.msg
src/: dope_to_pose_node.cpp  pose_selector_node.cpp  pose_selector_visualizer.py  pose_update_tester.cpp
srv/: ClassQuery.srv  GetPoses.srv  PoseDelete.srv  PoseQuery.srv  PoseUpdate.srv
